# ChangeLog for x11-libs/qt-assistant
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nov 2009; Alex Alexander <wired@gentoo.org>
  qt-assistant-4.6.9999.ebuild:
  different patching per USE

  18 Nov 2009; Alex Alexander <wired@gentoo.org>
  -qt-assistant-4.6.0_rc1.ebuild:
  4.6.0_rc1 moved in tree

  17 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  qt-assistant-4.6.0_rc1.ebuild, +files/qt-assistant-4.6.0_rc1-tools.patch:
  Updated tools patch for 4.6.0_rc1

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  -qt-assistant-4.6.0_beta1.ebuild:
  moved to the tree

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  qt-assistant-4.6.0_beta1.ebuild:
  switched to qt4-build.eclass

  15 Oct 2009; Alex Alexander <wired@gentoo.org>
  qt-assistant-4.6.0_beta1.ebuild:
  removed obsolete patch

*qt-assistant-4.6.0_beta1 (14 Oct 2009)

  14 Oct 2009; Dror Levin <spatz@gentoo.org>
  +qt-assistant-4.6.0_beta1.ebuild,
  -qt-assistant-4.6.0_alpha_pre1-r1.ebuild:
  Version bump.

  14 Oct 2009; Jonathan Callen <abcd@gentoo.org> -files/Assistant.desktop:
  Drop old .desktop file

  04 Oct 2009; Alex Alexander <wired@gentoo.org> -qt-assistant-4.5.3.ebuild:
  in tree

  03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org>
  qt-assistant-4.6.9999.ebuild, qt-assistant-4.9999.ebuild:
  Removing qdocconf patch from live ebuilds - fixed upstream.

*qt-assistant-4.5.3 (02 Oct 2009)

  02 Oct 2009; Alex Alexander <wired@gentoo.org> +qt-assistant-4.5.3.ebuild:
  version bump

*qt-assistant-4.6.0_alpha_pre1-r1 (14 Sep 2009)

  14 Sep 2009; Dominik Kapusta <d@ayoy.net>
  -qt-assistant-4.6.0_alpha_pre1.ebuild,
  +qt-assistant-4.6.0_alpha_pre1-r1.ebuild:
  Revbump due to previous changes

  14 Sep 2009; Dominik Kapusta <d@ayoy.net>
  qt-assistant-4.6.0_alpha_pre1.ebuild, qt-assistant-4.6.9999.ebuild,
  +files/qt-assistant-4.6-qdocconf.patch, qt-assistant-4.9999.ebuild:
  Fixed generating incomplete documentation

  14 Sep 2009; Alex Alexander <wired@gentoo.org>