@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
+  qt-assistant-4.6.9999.ebuild, qt-assistant-4.9999.ebuild:
+  Forward port of fix for bug #289811
+
   18 Nov 2009; Alex Alexander <wired@gentoo.org>
   qt-assistant-4.6.9999.ebuild:
   different patching per USE
